--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -5,7 +5,7 @@ $link: $purple-300
 $link-hover: $purple-400
 
 //$gap: 46px
-$column-gap: 5px
+$column-gap: 10px
 // $variable-columns: true !default
 // $widescreen-enabled: true
 // @import "bulmacolumns.sass"
@@ -15,23 +15,26 @@ $family-sans-serif: Heebo, sans-serif
 
 // https://tailwindcss.com/docs/customizing-colors#default-color-palette
 html
+  background: $gray-200
   padding: 0
   margin: 0
+  font-size: 16px
   overflow: -moz-scrollbars-vertical
   overflow-y: scroll // these fix the modal issue where it removes scrollbar and bungs layout
-  text-edge: cap alphabetic // these two don't actually work just yet.
-  leading-trim: both // these two don't actually work just yet.
+  text-rendering: optimizeLegibility
+  //text-edge: cap alphabetic // these two don't actually work just yet.
+  //leading-trim: both // these two don't actually work just yet.
 body
-  background-color: #f2f0f5
+  // background-color: #f2f0f5
   font-family: $family-sans-serif
   color: $gray-800
-  line-height: 1.6em
-  font-size: .75em
+  font-size: .8rem
+  line-height: 1.2rem
   font-weight: 400
   margin-top: 80px
 textarea, input, button, select
-  font-family: inherit // FF needs these
   font-size: inherit
+  font-family: inherit // FF needs these
 a
   color: $link
   text-decoration: none
@@ -50,23 +53,23 @@ img
 .hide
   display: none
 h1,h2,h3,h4, .day_header
-  line-height: 1.6em
   font-weight: 300
   color: $gray-400
+  margin: 1.5rem 0 1rem 0
 ion-icon
   vertical-align: -10%
 
 h1, .day_header
-  font-size: 300%
+  font-size: 2.5rem
 h2
-  font-size: 250%
+  font-size: 2rem
 h3
-  font-size: 200%
+  font-size: 1.5rem
   font-weight: 400
   border-top: 2px solid $purple-200
   padding: 15px 0px 13px 0px
 h4
-  font-size: 150%
+  font-size: 1.25rem
 .container
   max-width: 1400px
   margin: 0 auto
@@ -80,17 +83,18 @@ h4
   padding-top: 0
 .box
   background-color: $white
-  border-radius: 2px
-  outline: 1px solid $purple-200
+  // border: 1px solid $purple-200
+  border-radius: 5px
 .box_alt
-  background-color: lighten($purple-100, 1%)
-  outline: 1px solid $purple-200
-  border-radius: 2px
+  background-color: lighten($gray-200, 2%)
+  //border: 1px solid $purple-200
+  border-radius: 5px
 
 .sheet, .filters_form, .quick_add_form
   margin: 0px 0px 10px 0px
-  padding: 30px 30px 30px 30px
-
+  padding: 30px 40px 30px 40px
+.filters_form, .quick_add_form
+  padding: 30px 20px 30px 20px
 .table
   display: table
   //table-layout: fixed
@@ -113,14 +117,14 @@ h4
   &.task_col_graph
     width: 10px
     div
-      display: inline-block
+      display: block
       width: 5px
-      height: 50px
+      height: 38px
       border-radius: 5px
       margin-left: -5px
       margin-right: 5px
       border: 1px solid white
-      vertical-align: middle
+      vertical-align: baseline
       &.heat_0
         background-color: #caefff
       &.heat_1
@@ -134,7 +138,7 @@ h4
 
 
 .task_duration, .task_project, .task_value, .task_client
-  font-size: 150%
+  font-size: 1.25rem
   font-weight: 500
   margin-left: -.05em // pedantic nudging so the larger text lines up a little nicer with text underneath
 .task_description, .task_time, .task_value_source
@@ -146,7 +150,7 @@ h4
   color: $gray-600
   white-space: nowrap
 .task_value_currency
-  font-size: 75%
+  font-size: .75rem
   vertical-align: 6%
   margin-right: 1px
 .cell_alignright
@@ -188,7 +192,7 @@ h4
   color: $purple-300
   border-bottom: 1px solid $purple-200
   padding: 20px 0px
-  font-size: 150%
+  font-size: 2rem
   z-index: 2
   position: fixed
   top: 0
@@ -216,7 +220,7 @@ label
   color: $gray-500
   font-weight: 400
   text-transform: uppercase
-  font-size: 75%
+  font-size: .5rem
 input, textarea
   width: 100%
   padding: 10px 10px
@@ -238,14 +242,13 @@ textarea
   width: 100%
 select
   border: 1px solid $gray-400
-  font-size: 100%
   border-radius: 3px
   background-color: transparent
 button
   background-color: $purple-100
   width: 100%
   vertical-align: middle
-  padding: 10px 20px
+  padding: 2px 20px
   height: 35px
   margin: 0
   border: 1px solid $purple-300
